# ALIS_CORE

./: .dockerignore  .gitignore  README.md  REPO_OVERVIEW.md  TRACE_SCHEMA.md  cleanup.sh  dev.sh  remove-nested-git-repos.sh  start_dev.sh
merlt/: .claude-doc-trigger.json  .dockerignore  CLAUDE.md  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.dev.yml  pyproject.toml  start_dev.sh  trace_output.json
merlt-models/: .claude-doc-trigger.json  .dockerignore  .gitattributes  Dockerfile  LICENSE  README.md  pyproject.toml  start_dev.sh
merlt-models/checkpoints/e2e_rlcf/: epoch_1.pt  epoch_2.pt  final.pt
merlt-models/merlt_models/: __init__.py
merlt-models/tests/: conftest.py  test_config_models.py  test_loaders.py
merlt-models/weights/: __init__.py  experiment.py  learner.py  store.py
merlt/alembic/: env.py
merlt/alembic/versions/: 001_initial_baseline.py  002_add_audit_da_tables.py  003_add_api_keys_table.py  baafa63897a6_add_ingestion_schedule_and_feedback_.py
merlt/config/: rlcf_training.yaml
merlt/data/falkordb/: dump.rdb
merlt/data/qdrant/: raft_state.json
merlt/data/redis/: dump.rdb
merlt/docs/: API_PIPELINE_MONITORING.md  GRAPH_SEARCH_IMPLEMENTATION.md  INTEGRATION_ANALYSIS_ACADEMIC.md  MERL_T_ARCHITECTURE_MAP.md  MERL_T_IMPLEMENTATION_STATUS.md  README_DOCUMENTATION.md  ROADMAP_COMPLETE_2026.md
merlt/docs/architecture/: DISAGREEMENT_DETECTION_SPEC.md  GATING_POLICY_INTEGRATION.md
merlt/docs/backup_2026-01-04/: API_REFERENCE_EXPERT_SYSTEM.md  HOTFIX_ASYNC_SESSION_DEPENDENCY.md  MERLT_VISUALEX_TASK_MAPPING.md  SPRINT_1_TASK_12_E2E_TESTING_SUMMARY.md
merlt/docs/claude-context/: CURRENT_STATE.md
merlt/docs/guides/: quickstart.md
merlt/docs/rlcf/: RLCF.md
merlt/docs/thesis/: RLCF_LEGAL_DOCUMENT.md
merlt/examples/: apply_multivigenza_cp.py  batch_enrich_brocardi.py  batch_ingest_libro_iv.py  create_qa_tables.py  e2e_rlcf_training.py  exp022_policy_simulation.py  exp023_e2e_community.py  exp024_real_expert.py  exp025_e2e_policy_simulation.py  exp025_policy_trainers_evaluation.py  exp_validate_reinforce.py  generate_ground_truth_cp.py  ingest_241_multivigenza.py  ingest_art_1453_1456.py  ingest_libro_primo_cp.py  migrate_add_target_is_pending.py  rerun_massime_only.py  rlcf_training_batch.py  run_enrichment_migration.py  test_components_cp.py  test_orchestrator_init.py  test_qa_e2e.py  update_graph_hierarchy.py
merlt/merlt/: __init__.py  app.py
merlt/merlt/api/: __init__.py  api_keys_router.py  audit_router.py  auth.py  circuit_breaker_router.py  citation_router.py  dashboard_router.py  devils_advocate_router.py  enrichment_router.py  expert_metrics_router.py  experts_router.py  export_router.py  feedback_api.py  graph_router.py  ingestion_api.py  pipeline_router.py  policy_evolution_router.py  profile_router.py  quarantine_router.py  rate_limit.py  regression_router.py  rlcf_router.py  schedule_router.py  statistics_router.py  trace_router.py  tracking_router.py  validity_router.py  ws_router.py
merlt/merlt/citation/: __init__.py  formatter.py  urn_parser.py
merlt/merlt/clients/: __init__.py  models.py  visualex_client.py
merlt/merlt/config/: __init__.py  environments.py
merlt/merlt/core/: legal_knowledge_graph.py
merlt/merlt/disagreement/: __init__.py  detector.py  heads.py
merlt/merlt/experts/: __init__.py  base.py  circuit_breaker.py  gating.py  literal.py  models.py  orchestrator.py  pipeline_types.py  precedent.py  principles.py  prompt_loader.py  react_mixin.py  router.py  synthesizer.py  systemic.py
merlt/merlt/models/: __init__.py  mappings.py
merlt/merlt/ner/: __init__.py  spacy_model.py  training.py
merlt/merlt/pipeline/: __init__.py  amendment_extractor.py  batch_ingestion.py  chunking.py  document_parser.py  external_ingestion.py  ingestion.py  live_enrichment.py  multivigenza.py  visualex.py  websocket_manager.py
merlt/merlt/rlcf/: __init__.py  affinity_service.py  audit_service.py  authority_sync.py  bias_detection.py  curriculum_learning.py  database.py  domain_authority.py  edit_merge.py  entity_feedback.py  export_service.py  external_feedback.py  feedback_aggregation_service.py  model_config.yaml  models.py  multilevel_feedback.py  ner_feedback_buffer.py  persistence.py  pii_service.py  policy_gradient.py  policy_manager.py  quarantine_service.py  react_ppo_trainer.py  replay_buffer.py  reproducibility_service.py  single_step_trainer.py  synthetic_feedback_service.py  training_scheduler.py  traversal_training_service.py
merlt/merlt/services/: __init__.py  ingestion_scheduler.py
merlt/merlt/sources/: __init__.py
merlt/merlt/storage/: __init__.py  combined_metadata.py
merlt/merlt/tools/: base.py  citation_chain.py  constitutional_basis.py  external_source.py  historical_evolution.py  principle_lookup.py  search.py
merlt/merlt/utils/: __init__.py  map.py  ordinals.py  text_op.py  urngenerator.py
merlt/scripts/: pipeline_config.yaml  show_trace.py
merlt/tests/: test_gating_policy_integration.py
merlt/tests/_archive/: test_enrichment_api.py
merlt/tests/api/: __init__.py  test_auth_api.py  test_document_upload.py  (+4 more)
visualex-api/: .claude-doc-trigger.json  .dockerignore  CLAUDE.md  Dockerfile  LICENSE  README.md  pyproject.toml  start_dev.sh
visualex-api/examples/: demo_normattiva.py
visualex-api/scripts/: generate_trace.py  generate_trace_live.py
visualex-api/tests/: conftest.py
visualex-api/visualex/: __init__.py  api.py  app.py  config.py  exceptions.py
(+997 files in other folders)
